[Fix] fix navbar not fixed and overflow not handled

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,5 +7,4 @@
   padding: 2rem;
 
   font-weight: normal;
-  overflow-x: hidden;
 }
